# ohui-private

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  TASKS.md  compatibility.md  project-structure-proposal.md  vcpkg.json  version.rc
.github/workflows/: prepare-release.yml  publish-release.yml  release.yml
.private/: compatibility.md  mod-compatibility-checklist.md
.private/decisions/: project-structure-proposal-v2.md
.private/notes/: session-resume-2026-03-05.md
.private/reference/: commonlibsse-ng-gotchas.md  cosave-handling.md  distribution-automation.md  esma-tool.md  esp-workflow.md  git-on-windows.md  hooking-patterns.md  ini-settings.md  mcm-development.md  mod-detection.md  packaging.md  papyrus-native-functions.md  papyrus-workflow.md  performance-patterns.md  powershell-from-bash.md  project-bootstrap.md  repo-public-private.md  translation-support.md  versioning.md  vr-compatibility.md
.private/reference-overrides/: ohui-conventions.md
.private/screens/: edit-mode.md  inventory-barter-container.md  level-up.md  main-menu.md
.private/systems/: dsl-and-skinning.md  mcm2.md  message-log.md  outfit-system.md  performance-model.md
docs/: Architecture.md  Build.md  CHANGELOG.md
include/: CorePCH.h  PCH.h  Version.h
include/ohui/binding/: BindingSchema.h  BindingTypes.h  DataBindingEngine.h  ModBindingAPI.h
include/ohui/core/: IFileSystem.h  Log.h  RegistrationTypes.h  Result.h  Types.h
include/ohui/cosave/: CosaveManager.h  CosaveTypes.h  PersistenceAPI.h
include/ohui/dsl/: ComponentHandler.h  ComponentStateStore.h  DSLRuntimeEngine.h  DefaultTokens.h  DrawCall.h  IconAtlas.h  Selector.h  TokenStore.h  USSParser.h  USSProperty.h  USSRule.h  WidgetAST.h  WidgetParser.h
include/ohui/hud/: HUDWidgetDefs.h  HUDWidgetManager.h  HUDWidgetManifests.h
include/ohui/i18n/: StringTable.h  StringTypes.h
include/ohui/input/: ActionRegistry.h  ButtonPromptResolver.h  InputContext.h  InputContextStack.h  InputTypes.h  RebindingStore.h
include/ohui/layout/: YogaWrapper.h
include/ohui/mcm/: MCM2ConditionEngine.h  MCM2ConditionTypes.h  MCM2DefinitionDiff.h  MCM2DefinitionParser.h  MCM2HotReloadEngine.h  MCM2PersistenceManager.h  MCM2Types.h  MCMCallbackEngine.h  MCMListManager.h  MCMRegistrationEngine.h  MCMTypes.h
include/ohui/message/: MessageLogPanel.h  MessageStream.h  MessageTypes.h
include/ohui/widget/: EditCommands.h  EditSession.h  EditTypes.h  IViewportWidget.h  LayoutProfile.h  LayoutProfileManager.h  ModWidgetAPI.h  MultiSelectState.h  SnapGrid.h  UndoRedoStack.h  ViewportManager.h  WidgetRegistry.h  WidgetTypes.h
screens/: crafting.md  dialogue.md  edit-mode.md  favourites-radial.md  gift-menu.md  inventory-barter-container.md  load-game.md  loading-screen.md  magic-spells-shouts.md  main-menu.md  map.md  quest-journal.md  skills.md  stats.md  tween-menu.md  wait-sleep.md
scripts/: build_package.ps1  check_versions.py  deploy.ps1
src/: main.cpp
src/binding/: BindingSchema.cpp  DataBindingEngine.cpp  ModBindingAPI.cpp
src/core/: GameBridge.cpp  Log.cpp
src/cosave/: CosaveManager.cpp  PersistenceAPI.cpp
src/dsl/: ComponentRegistry.cpp  DSLRuntimeEngine.cpp  IconAtlas.cpp  TokenStore.cpp  USSParser.cpp  WidgetParser.cpp
src/dsl/handlers/: AtomHandlers.cpp  AtomHandlers.h  BuiltinHandlers.cpp  BuiltinHandlers.h  ContainerHandlers.cpp  ContainerHandlers.h  EditModeHandlers.cpp  EditModeHandlers.h  HUDHandlers.cpp  HUDHandlers.h  IndicatorHandlers.cpp  IndicatorHandlers.h  InputHandlers.cpp  InputHandlers.h  ListHandlers.cpp  ListHandlers.h  MediaHandlers.cpp  MediaHandlers.h  MessageFeedHandler.cpp  MessageFeedHandler.h  NavigationHandlers.cpp  NavigationHandlers.h  TextHandlers.cpp  TextHandlers.h  ValueHandlers.cpp  ValueHandlers.h
src/hud/: HUDWidgetManager.cpp
src/i18n/: StringTable.cpp
src/input/: ActionRegistry.cpp  ButtonPromptResolver.cpp  InputContextStack.cpp  RebindingStore.cpp
src/layout/: YogaWrapper.cpp
src/mcm/: MCM2ConditionEngine.cpp  MCM2DefinitionDiff.cpp  MCM2DefinitionParser.cpp  MCM2HotReloadEngine.cpp  MCM2PersistenceManager.cpp  MCMCallbackEngine.cpp  MCMListManager.cpp  MCMRegistrationEngine.cpp
src/message/: MessageLogPanel.cpp  MessageStream.cpp
src/widget/: EditCommands.cpp  EditSession.cpp  LayoutProfileManager.cpp  ModWidgetAPI.cpp  MultiSelectState.cpp  UndoRedoStack.cpp  ViewportManager.cpp  WidgetRegistry.cpp
systems/: actor-viewport.md  component-library.md  cosave-persistence.md  data-binding-schema.md  dsl-and-skinning.md  hud-widget-runtime.md  icon-system.md  input-handling.md  localisation.md  mcm2.md  message-log.md  mod-registration-api.md  new-game-plus.md  performance-model.md  provenance-stamps.md
tests/: ActionRebindTests.cpp  BindingSchemaTests.cpp  ButtonPromptTests.cpp  CMakeLists.txt  ComponentRegistryTests.cpp  ContainerComponentTests.cpp  CosaveTests.cpp  DSLRuntimeTests.cpp  DataBindingTests.cpp  EditModeComponentTests.cpp  EditModeTests.cpp  HUDComponentTests.cpp  HUDWidgetManagerTests.cpp  IconAtlasTests.cpp  IndicatorComponentTests.cpp  InputComponentTests.cpp  InputContextTests.cpp  LayoutProfileTests.cpp  LayoutTests.cpp  ListComponentTests.cpp  MCM2ConditionTests.cpp  MCM2DiffTests.cpp  MCM2HotReloadTests.cpp  MCM2ParserTests.cpp  MCM2PersistenceTests.cpp  MCMCallbackTests.cpp  MCMListManagerTests.cpp  MCMRegistrationTests.cpp  MediaComponentTests.cpp  MessageFeedComponentTests.cpp  MessageLogPanelTests.cpp  MessageStreamTests.cpp  ModBindingAPITests.cpp  ModWidgetAPITests.cpp  NavigationComponentTests.cpp  PersistenceTests.cpp  RTLLayoutTests.cpp  SanityTests.cpp  StringTableTests.cpp  TextComponentTests.cpp  (+7 more)
tests/fixtures/: base-tokens.uss  basic.uss  skin-tokens.uss
tests/mocks/: MockFileSystem.h
